syntax = "proto3";

package pb;

option go_package = "github.com/Arthur199212/microservices-demo/src/pb";

message Money {
  float amount = 1;
  string currencyCode = 2;
}
